[package]
name = "unflappable"
version = "0.2.0"
authors = ["Andrew Dona-Couch <unflappable@andrewcou.ch>"]
edition = "2018"
description = "A batteries-included embedded-hal InputPin debouncer."
license = "MIT"
repository = "https://git.sr.ht/~couch/unflappable"
keywords = ["embedded-hal", "no-std", "debounce"]
categories = ["embedded"]

[dependencies]
embedded-hal = { version = "1.0" }

[dev-dependencies]
embedded-hal-mock = "0.7"
